--- a/css/styles.css
+++ b/css/styles.css
@@ -290,7 +290,7 @@ nav h1 a {
     width: 100%;
     height: 500px;
     margin-top: 130px;
-    margin-left: 7%;
+    margin-left: 0;
   }
   #restaurant-container{
     margin-top: -148px;
@@ -325,7 +325,7 @@ nav h1 a {
     width: 100%;
     height: 500px;
     margin-top: 130px;
-    margin-left: 7%;
+    margin-left: 0;
   }
   #restaurant-container{
     margin-top: -148px;
